# pandoc-container-build

./: Containerfile.cabal  Containerfile.ghc  Containerfile.pandoc  README.md  download_bootstrap_deps.py  fetch-cabal.sh  fetch-ghc.sh  fetch-pandoc.sh  generate-pandoc-deps.sh  pandoc-deps.txt  pandoc.cabal.project
